syntax = "proto3";
package ntchjb.learncosmos.learncosmos;

// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/ntchjb/learn-cosmos/x/learncosmos/types";

// GenesisState defines the capability module's genesis state.
message GenesisState {
    // this line is used by starport scaffolding # genesis/proto/state
}

